// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardListItem Interactions should call onPress method when pressed 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flexDirection": "column",
      "opacity": 1,
      "paddingVertical": 22,
    }
  }
  testID="list-item"
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "width": "35%",
          },
        ]
      }
    >
      <Image
        source={
          Object {
            "uri": "https://images.com/abc.png",
          }
        }
        style={
          Array [
            Object {
              "borderRadius": 8,
              "height": 96,
              "width": 96,
            },
          ]
        }
        testID="item-photo"
      />
    </View>
    <View
      style={
        Array [
          Object {
            "width": "65%",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#1C2530",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "700",
                "textAlign": "left",
              },
            ]
          }
          testID="item-title"
          variant="h4"
        >
          A Title
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#1C2530",
                "fontFamily": "System",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "marginTop": 8,
                "textAlign": "left",
              },
            ]
          }
          testID="item-subtitle"
          variant="subtitle2"
        >
          A Subtitle
        </Text>
        <Text
          muted={true}
          style={
            Array [
              Object {
                "color": "#97A4AB",
                "fontFamily": "System",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "700",
                "marginTop": 8,
                "textAlign": "left",
              },
            ]
          }
          testID="item-eventdate"
          variant="subtitle2"
          weight="bold"
        >
          A eventDate
          <Text
            muted={true}
            style={
              Array [
                Object {
                  "color": "#97A4AB",
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "marginTop": 8,
                  "textAlign": "left",
                },
              ]
            }
            testID="item-eventtime"
            variant="subtitle2"
          >
            A eventTime
          </Text>
        </Text>
      </View>
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          muted={true}
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#97A4AB",
                "fontFamily": "System",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "400",
                "marginTop": 8,
                "textAlign": "left",
              },
            ]
          }
          testID="item-description"
          variant="subtitle2"
        >
          A Description
        </Text>
      </View>
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          italic={true}
          muted={true}
          style={
            Array [
              Object {
                "color": "#97A4AB",
                "fontFamily": "System",
                "fontSize": 14,
                "fontStyle": "italic",
                "fontWeight": "700",
                "marginTop": 8,
                "textAlign": "left",
              },
            ]
          }
          testID="item-tags"
          variant="subtitle2"
          weight="bold"
        >
          Tag One 
          Tag Two
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`CardListItem Rendering hides tags when it is null 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flexDirection": "column",
      "opacity": 1,
      "paddingVertical": 22,
    }
  }
  testID="list-item"
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "width": "35%",
          },
        ]
      }
    >
      <Image
        source={
          Object {
            "uri": "https://images.com/abc.png",
          }
        }
        style={
          Array [
            Object {
              "borderRadius": 8,
              "height": 96,
              "width": 96,
            },
          ]
        }
        testID="item-photo"
      />
    </View>
    <View
      style={
        Array [
          Object {
            "width": "65%",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#1C2530",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "700",
                "textAlign": "left",
              },
            ]
          }
          testID="item-title"
          variant="h4"
        >
          A Title
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#1C2530",
                "fontFamily": "System",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "marginTop": 8,
                "textAlign": "left",
              },
            ]
          }
          testID="item-subtitle"
          variant="subtitle2"
        >
          A Subtitle
        </Text>
        <Text
          muted={true}
          style={
            Array [
              Object {
                "color": "#97A4AB",
                "fontFamily": "System",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "700",
                "marginTop": 8,
                "textAlign": "left",
              },
            ]
          }
          testID="item-eventdate"
          variant="subtitle2"
          weight="bold"
        >
          A eventDate
          <Text
            muted={true}
            style={
              Array [
                Object {
                  "color": "#97A4AB",
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "marginTop": 8,
                  "textAlign": "left",
                },
              ]
            }
            testID="item-eventtime"
            variant="subtitle2"
          >
            A eventTime
          </Text>
        </Text>
      </View>
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          muted={true}
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#97A4AB",
                "fontFamily": "System",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "400",
                "marginTop": 8,
                "textAlign": "left",
              },
            ]
          }
          testID="item-description"
          variant="subtitle2"
        >
          A Description
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`CardListItem Rendering renders itself correctly 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flexDirection": "column",
      "opacity": 1,
      "paddingVertical": 22,
    }
  }
  testID="list-item"
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "width": "35%",
          },
        ]
      }
    >
      <Image
        source={
          Object {
            "uri": "https://images.com/abc.png",
          }
        }
        style={
          Array [
            Object {
              "borderRadius": 8,
              "height": 96,
              "width": 96,
            },
          ]
        }
        testID="item-photo"
      />
    </View>
    <View
      style={
        Array [
          Object {
            "width": "65%",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#1C2530",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "700",
                "textAlign": "left",
              },
            ]
          }
          testID="item-title"
          variant="h4"
        >
          A Title
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#1C2530",
                "fontFamily": "System",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "marginTop": 8,
                "textAlign": "left",
              },
            ]
          }
          testID="item-subtitle"
          variant="subtitle2"
        >
          A Subtitle
        </Text>
        <Text
          muted={true}
          style={
            Array [
              Object {
                "color": "#97A4AB",
                "fontFamily": "System",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "700",
                "marginTop": 8,
                "textAlign": "left",
              },
            ]
          }
          testID="item-eventdate"
          variant="subtitle2"
          weight="bold"
        >
          A eventDate
          <Text
            muted={true}
            style={
              Array [
                Object {
                  "color": "#97A4AB",
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "marginTop": 8,
                  "textAlign": "left",
                },
              ]
            }
            testID="item-eventtime"
            variant="subtitle2"
          >
            A eventTime
          </Text>
        </Text>
      </View>
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          muted={true}
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#97A4AB",
                "fontFamily": "System",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "400",
                "marginTop": 8,
                "textAlign": "left",
              },
            ]
          }
          testID="item-description"
          variant="subtitle2"
        >
          A Description
        </Text>
      </View>
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          italic={true}
          muted={true}
          style={
            Array [
              Object {
                "color": "#97A4AB",
                "fontFamily": "System",
                "fontSize": 14,
                "fontStyle": "italic",
                "fontWeight": "700",
                "marginTop": 8,
                "textAlign": "left",
              },
            ]
          }
          testID="item-tags"
          variant="subtitle2"
          weight="bold"
        >
          Tag One 
          Tag Two
        </Text>
      </View>
    </View>
  </View>
</View>
`;
